Changelog
=========

2.1.1 (unreleased)
------------------

- Nothing changed yet.


2.1.0 (2012-10-04)
------------------

- moved search from skins to a view, for Plone4 compatibility (it isn't new-search like yet) [andrea]
- added uninstall profile to remove skins [andrea]


2.0.2 (2012-08-23)
------------------

- fixed style for results [andrea]


2.0.1 (2012-08-03)
------------------

- removed search_form.pt [andrea]


2.0.0 (2012-08-02)
------------------

- cleanup old Plone 3.2 garbage [keul] 
- fixed search view styles [andrea]
- added configlet to manage sitesearch options [andrea]

1.5.1 (2012/04/23)
------------------

- added class to hidden indexes info div [andrea]
- fixed hidden indexes management [andrea]

1.5.0 (2012/04/16)
------------------

- refactoring sitesearch_view to speed up searches [andrea]

1.4.1 (2012/03/26)
------------------

- fix translation [andrea]

1.4.0 (2012/03/12)
------------------

- Customizzato indice Date per gli eventi [andrea]
- Ora vengono visualizzate le informazioni sulle date/luogo negli eventi [andrea]
- L'ordinamento per data viene effettuato per l'indice Date [andrea]
- Abilitata la gestione di indici "nascosti" che ci si può portare dietro durante la ricerca [andrea]

1.3.1 (2011/11/28)
------------------

- Fix errore nel titolo quando il path non è corretto (#329) [andrea]

1.3.0 (2011/11/28)
------------------

- Sistemata grafica e css [nekorin]

1.2.0 (2011/06/20)
------------------

- Aggiunta customizzaizone dei tab [andrea]

1.1.1 (2011/04/07)
------------------

- rimosso ordinamento alfabetico degli indici. Ora prende l'ordine impostato nella property [andrea]

1.1.0 (2011/04/04)
------------------

- rimossa visualizzazione di default per le tassonomie. Adesso vanno specificate nella property [andrea]

1.0.6 (2010/11/08)
------------------

- fissato js per il batching [andrea]

1.0.5 (2010/11/08)
------------------

- filtrate le categorie in base al tipo selezionato [andrea]

1.0.4 (2010/11/04)