@@ -1,13 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_skins" allow_any="False" cookie_persistence="False">
-
- <object name="rer.sitesearch.templates"
-    meta_type="Filesystem Directory View"
-    directory="rer.sitesearch:skins/rer.sitesearch.templates"/>
-
- <skin-path name="*">
-  <layer name="rer.sitesearch.templates"
-     insert-after="custom"/>
- </skin-path>
-
-</object>
