@@ -4,7 +4,8 @@ Changelog
 2.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- fixed update step [andrea]
+- fixed first tab selection [andrea]
 
 
 2.1.0 (2012-10-04)
